# OpenString

./: .gitattributes  .gitignore  README.md
ostring/: CMakeLists.txt  ostring.sln
ostring/Test/: Test.vcxproj  Test.vcxproj.filters  static_function.cpp  test_helper.cpp  test_string.cpp  test_string_view.cpp
ostring/fmt/: fmt.vcxproj  fmt.vcxproj.filters
ostring/fmt/include/fmt/: ranges.h
ostring/include/: definitions.h  helpers.h  open_string.h  ostr.h  osv.h
ostring/include/olog/: definitions.h  olog.h  spdlog_sys.h
ostring/include/ostring/: char_types.h  coder.h  definitions.h  format.h  helpers.h  osf.h  ostr.h  osv.h  types.h
ostring/ostring/: char_types.h  converter.h  definitions.h  helpers.h  open_string.cpp  ostring.vcxproj  ostring.vcxproj.filters  static_functions.h  string.h  string_view.h
ostring/sample/: CMakeLists.txt  open_string_sample.cpp
ostring/source/: ostr.cpp  osv.cpp
ostring/source/olog/: olog.cpp  spdlog_sys.cpp
ostring/source/ostring/: coder.cpp  format.cpp  ostr.cpp  osv.cpp
ostring/test/: CMakeLists.txt  test_main.cpp
ostring/test/helper/: test_helper.cpp
ostring/test/string/: CMakeLists.txt  test_string.cpp
ostring/test/string_view/: CMakeLists.txt  test_string_view.cpp
ostring/tests/: CMakeLists.txt  format_test.cpp  function_test.cpp  helper_test.cpp  string_test.cpp  string_view_test.cpp
